<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        app:iconSpaceReserved="false"
         android:defaultValue="false"
         android:key="@string/dark_theme_on"
         android:persistent="true"
         android:title="@string/dark_theme" />

    <Preference
        app:iconSpaceReserved="false"

        android:key="@string/download_book_pref"
        android:title="@string/download_book_pref">

    </Preference>

    <Preference
        app:iconSpaceReserved="false"

        android:defaultValue="10"
        android:dialogTitle="每日应学单词数"
        android:inputType="number"
        android:key="@string/should_learn"
        android:title="学习计划" />

    <Preference
        app:iconSpaceReserved="false"

        android:key="@string/advance_setting"
        android:title="高级设置" />
    <Preference
        app:iconSpaceReserved="false"

        android:key="@string/about_app"
        android:title="@string/about_app_str"></Preference>

</PreferenceScreen>